packages/next-swc/crates/core/tests/errors/next-font-loaders/not-ident/input.js
import { Inter } from 'neer-font/google'

const { a } = Inter({
  variant: '400',
})

const [b] = Inter({
  variant: '400',
})

const { e } = {}
